--- a/media/css/main.css
+++ b/media/css/main.css
@@ -252,7 +252,7 @@ YELLOW: #524E2E
 
 
 
-/*////////////////////////////////////////////////////////////////// STORY PAGE */
+/*////////////////////////////////////////////////////////////////// TOOLBAR */
 #toolbar {
     position: fixed;
     z-index: 100;
@@ -549,6 +549,22 @@ form input[type="submit"]:hover {
     font-family: Miso;
     font-weight: 400;
 }
+.thisTitle {
+    color: #444;
+    font-size: 15px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #333;
+}
+.uc a {
+    color: #90705f;
+    font-weight: 200;
+}
+.uc a:hover {
+    color: #333;
+}
+
 
 
 #poetools {
