--- a/templates/base.html
+++ b/templates/base.html
@@ -12,11 +12,10 @@
 <body>
     {% block header %}
     {% endblock %}
-    
-    
+        
         <div id="toolbacker"></div>
         <div id="toolbar">
-            <div id="whitelogo"><a href="http://www.inarticle.org/news"><img src="/media/images/inartlogo_light.png" alt="fix" title="pleased to meet you" width="97" height="24" style="opacity: 0.6;"/></a></div>
+            <div id="whitelogo"><a href="http://www.inarticle.org/news"><img src="/media/images/inartlogo_light.png" alt="inArticle" width="97" height="24" style="opacity: 0.6;"/></a></div>
             {% block toolbar %}
             
             {% endblock %}
