--- a/templates/news/gather.html
+++ b/templates/news/gather.html
@@ -130,7 +130,7 @@
             var token = "";
             var resizeContent = function(){
                 gP = $('#gatherPage').outerHeight()
-                $('#content').css({'height': gP});
+                $('#content').css({'height': gP+40});
             }
             resizeContent();
             
