--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,9 @@
         
         <div id="toolbacker"></div>
         <div id="toolbar">
-            <div id="whitelogo"><a href="http://www.inarticle.org/news"><img src="/media/images/inartlogo_light.png" alt="inArticle" width="97" height="24" style="opacity: 0.6;"/></a></div>
+            <div id="whitelogo"><a href="http://www.inarticle.org/news/0"><img src="/media/images/inartlogo_light.png" alt="inArticle" width="97" height="24" style="opacity: 0.6;"/></a></div>
+            <div id="gatherbutton" class="rightnav button">Gather Articles</div>
+            <div id="feedbutton" class="rightnav button">View Feed</div>
             {% block toolbar %}
             
             {% endblock %}
