--- a/templates/news/splash.html
+++ b/templates/news/splash.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style = "background: rgb(250,240,242) url(/media/images/pape_light.gif) repeat 0 0; padding-top: 32px;">
-    <a id="splashimage" href="http://www.inarticle.org/news">
+    <a id="splashimage" href="http://www.inarticle.org/news/0">
         	<img src="/media/images/splash_900.jpg" alt="inArticle" width="900" height="698"/>
     </a>
     
