--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,9 @@
         <div id="toolbacker"></div>
         <div id="toolbar">
             <div id="whitelogo"><a href="http://www.inarticle.org/news/0"><img src="/media/images/inartlogo_light.png" alt="inArticle" width="97" height="24" style="opacity: 0.6;"/></a></div>
+            <div id="infobutton" class="rightnav button">Project Info</div>
             <div id="gatherbutton" class="rightnav button">Gather Articles</div>
-            <div id="feedbutton" class="rightnav button">View Feed</div>
+            <div id="feedbutton" class="rightnav button">NewsFeed</div>
             {% block toolbar %}
             
             {% endblock %}
@@ -29,6 +30,7 @@
         </div>
         
     <div id="footer">  
+
     {% block footer %}
         
     {% endblock %}
