debug quote freq

--- a/templates/news/collate.html
+++ b/templates/news/collate.html
@@ -41,7 +41,7 @@
                 <div id="headpad">
                 <h1 id="story_headline" class="borderbottom3">
                     {{ article.headline|safe }}
-                    <span style="float: right; margin-top: 26px; font-size: 11px">{{ article.date }}</span>
+                    <span style="float: right; margin-top: 26px; font-size: 11px; font-weight: 200;">{{ article.date }}</span>
                 </h1>
                 
                 </div>
