--- a/templates/news/collate.html
+++ b/templates/news/collate.html
@@ -8,7 +8,7 @@
 
 {% block header %}
     <script type="text/javascript" src="/media/js/UI_story.js"></script>
-    <script type="text/javascript" src="/media/js/getdata.js"></script>
+    <script type="text/javascript" src="/media/js/getdata_cross.js"></script>
 {% endblock %}
 
 {% block toolbar %}
