--- a/media/css/main_firefox.css
+++ b/media/css/main_firefox.css
@@ -4,80 +4,82 @@
 }
 
 
+<!--
 @font-face {
     font-family: 'Oswald';
-    src: url('Oswald-Regular.otf')  ; /* format('opentype'); */
+    src: url('Oswald-Regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Oswald';
-    src: url('Oswald-Light.otf')  ; /* format('opentype'); */
+    src: url('Oswald-Light.otf') format('opentype');
     font-weight: 200;
     font-style: normal;
 }
 @font-face {
     font-family: 'Oswald';
-    src: url('Oswald-Bold.otf')  ; /* format('opentype'); */
+    src: url('Oswald-Bold.otf') format('opentype');
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Miso';
-    src: url('miso.otf')  ; /* format('opentype'); */
+    src: url('miso.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Miso';
-    src: url('miso-light.otf')  ; /* format('opentype'); */
+    src: url('miso-light.otf') format('opentype');
     font-weight: 200;
     font-style: normal;
 }
 @font-face {
     font-family: 'Miso';
-    src: url('miso-bold.otf')  ; /* format('opentype'); */
+    src: url('miso-bold.otf') format('opentype');
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Titillium';
-    src: url('TitilliumText22L001.otf')  ; /* format('opentype'); */
+    src: url('TitilliumText22L001.otf') format('opentype');
     font-weight: 100;
     font-style: normal;
 }
 @font-face {
     font-family: 'Titillium';
-    src: url('TitilliumText22L002.otf')  ; /* format('opentype'); */
+    src: url('TitilliumText22L002.otf') format('opentype');
     font-weight: 200;
     font-style: normal;
 }
 @font-face {
     font-family: 'Titillium';
-    src: url('TitilliumText22L003.otf')  ; /* format('opentype'); */
+    src: url('TitilliumText22L003.otf') format('opentype');
     font-weight: 300;
     font-style: normal;
 }
 @font-face {
     font-family: 'Titillium';
-    src: url('TitilliumText22L004.otf')  ; /* format('opentype'); */
+    src: url('TitilliumText22L004.otf') format('opentype');
     font-weight: 400;
     font-style: normal;
 }
 @font-face {
     font-family: 'Titillium';
-    src: url('TitilliumText22L005.otf')  ; /* format('opentype'); */
+    src: url('TitilliumText22L005.otf') format('opentype');
     font-weight: 500;
     font-style: normal;
 }
 @font-face {
     font-family: 'Titillium';
-    src: url('TitilliumText22L006.otf')  ; /* format('opentype'); */
+    src: url('TitilliumText22L006.otf') format('opentype');
     font-weight: 600;
     font-style: normal;
 }
+-->
 
 
 body {
@@ -569,9 +571,6 @@ text.shadow {
     letter-spacing: 1px;
     padding: 2px 8px 1px;
     background-color: #fff;
-}
-.pubNames {
-    text-transform: uppercase;
 }
 
 
