--- a/templates/news/collate.html
+++ b/templates/news/collate.html
@@ -105,6 +105,8 @@
             </p>
             <p><span class="explainLable">Frequency:</span> This changes the 'ARTICLE MAPS' into 'heat maps' for the frequency of important terms. The greater the (red) saturation, the more frequent the usage.
             </p>
+            <p><span class="explainLable">Quotes:</span> This toggles the quote chart feature — a scatter plot of extracted quotations from the article. Each one is represented by circle, color coded to it's original publication. The metric used for the 'x'axis is a score based on the a count for the frequency of each work in the quote as compared with the other quotes. This is then divided by a fraction of the total number of words in this quote. The same is done for the 'y'axis, but compared to all of the words in every article. The hope is for densely meaningful quotes to score highly, and for similar quotes, used by different publishers, to be grouped together. Hover over the circles to see the text.
+            </p>
             <p><span class="explainLable">Entities:</span> This toggles the 'NAMED ENTITIES' display. These concentric arcs represent the levels of connectivity between the people, places, organizations, etc., mentioned. The center arc has entities that appeared in all of the articles, while the outer, shows what was unique.
             </p>
             <p><span class="explainLable">Grouping:</span> Grouping is a sub-function of Entities. This toggles a hover action for the arcs that shows what other entities appeared along with the one you are currently over. At the outer arcs, this will reveal which entities were in each individual article.
